# code-coach-app

./: .gitignore  README.md  pyproject.toml
code_coach/: manage.py
code_coach/code_coach/: asgi.py  settings.py  settings_dev.py  settings_local.py  urls.py  wsgi.py
code_coach/console/: admin.py  models.py  views.py
code_coach/console/migrations/: 0001_initial.py
code_coach/console/templates/: base.html  index.html
code_coach/console/templates/console/: base.html  index.html
code_coach/problems/: views.py
code_coach/problems/templates/problems/: index.html
